Translation for french and haussa added

--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -1,60 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">eArziki Marketplace</string>
-    <string name="nearest_items">Nearest Items</string>
-    <string name="date_newest">Date - Newest</string>
-    <string name="date_oldest">Date - Oldest</string>
-    <string name="price_cheapest">Price - Cheapest</string>
-    <string name="price_most_expensive">Price - Most Expensive</string>
-    <string name="initializing">Initializing...</string>
-    <string name="item_added_successfully">Item added successfully!</string>
-    <string name="unknown_category">Unknown Category!</string>
-    <string name="unknown_tag">Unknown Tag</string>
-    <string name="loading">Loading...</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="create_ad">Create Ad</string>
-    <string name="add_item_title">Title</string>
-    <string name="add_item_description">Description</string>
-    <string name="add_item_category">Category</string>
-    <string name="add_item_price">Price</string>
-    <string name="please_enter_a_valid_number">Please enter a valid number</string>
-    <string name="invalid_price">Invalid price</string>
-    <string name="please_fill_all_fields">Please fill all fields</string>
-    <string name="next">Next</string>
-    <string name="add_your_photos">Add your photos</string>
-    <string name="please_choose_at_least_one_image">Please choose at least one image</string>
-    <string name="post_item">Post item</string>
-    <string name="preparing">Preparing...</string>
-    <string name="uploading">Uploading...</string>
-    <string name="uploaded_successfully">Uploaded Successfully!</string>
-    <string name="marketplace">Marketplace</string>
+    <string name="nearest_items">Abubuwan da suka fi kusa</string>
+    <string name="date_newest">Kwanan wata - Sabo</string>
+    <string name="date_oldest">Kwanan wata - Tsoho</string>
+    <string name="price_cheapest">Farashi - Mafi Arha</string>
+    <string name="price_most_expensive">Farashi - Mafi Tsada</string>
+    <string name="initializing">Ana Shirya...</string>
+    <string name="item_added_successfully">An ƙara abu cikin nasara!</string>
+    <string name="unknown_category">Rukunin da ba a sani ba!</string>
+    <string name="unknown_tag">Alamar da ba a sani ba</string>
+    <string name="loading">Ana Lodawa...</string>
+    <string name="no_items_found">Babu abubuwan da aka samu.</string>
+    <string name="create_ad">Ƙirƙiri Talla</string>
+    <string name="add_item_title">Take</string>
+    <string name="add_item_description">Bayani</string>
+    <string name="add_item_category">Rukuni</string>
+    <string name="add_item_price">Farashi</string>
+    <string name="please_enter_a_valid_number">Da fatan za a shigar da lambar da ta dace</string>
+    <string name="invalid_price">Farashin da ba daidai ba</string>
+    <string name="please_fill_all_fields">Da fatan a cika dukkan filayen</string>
+    <string name="next">Na Gaba</string>
+    <string name="add_your_photos">Ƙara hotunanka</string>
+    <string name="please_choose_at_least_one_image">Da fatan za a zaɓi aƙalla hoto ɗaya</string>
+    <string name="post_item">Saka abu</string>
+    <string name="preparing">Ana Shirya...</string>
+    <string name="uploading">Ana Loda...</string>
+    <string name="uploaded_successfully">An Loda Nasarar!</string>
+    <string name="marketplace">Kasuwa</string>
     <string name="earziki" translatable="false">eArziki</string>
-    <string name="posted">Posted</string>
-    <string name="location">location..</string>
+    <string name="posted">An Saka</string>
+    <string name="location">wuri..</string>
     <string name="whatsapp" translatable="false">WhatsApp</string>
-    <string name="text_seller">Text seller</string>
-    <string name="sms">SMS</string>
-    <string name="category_home_crafts">Home Crafts</string>
-    <string name="category_used_items">Used Items</string>
-    <string name="category_food_agriculture"><![CDATA[Food & Agriculture]]></string>
-    <string name="category_local_services">Local Services</string>
-    <string name="category_local_offers">Local Offers from Shops and Restaurants</string>
-    <string name="items">%1$s items</string>
-    <string name="search">Search</string>
-    <string name="decoratives">Decoratives</string>
-    <string name="tag_sports">Sports</string>
-    <string name="tag_electronics">Electronics</string>
-    <string name="tag_materials">Materials</string>
-    <string name="tag_books">Books</string>
-    <string name="tag_accessories">Accessories</string>
-    <string name="tag_kitchen">Kitchen</string>
-    <string name="tag_clothes">Clothes</string>
-    <string name="tag_technology">Technology</string>
-    <string name="tag_home_appliances">Home Appliances</string>
-    <string name="tag_building_materials">Building Materials</string>
+    <string name="text_seller">Sakon mai sayarwa</string>
+    <string name="sms" translatable="false">SMS</string>
+    <string name="category_home_crafts">Sana\'oin Gida</string>
+    <string name="category_used_items">Kayan amfani</string>
+    <string name="category_food_agriculture"><![CDATA[Abinci & Noma]]></string>
+    <string name="category_local_services">Ayyukan Gida</string>
+    <string name="category_local_offers">Tayin Gida daga Shaguna da gidajen abinci</string>
+    <string name="search">Bincika</string>
+    <string name="items">%1$s abubuwa</string>
+    <string name="decoratives">Kayayyakin ado</string>
+    <string name="tag_sports">Wasanni</string>
+    <string name="tag_electronics">Lantarki</string>
+    <string name="tag_materials">Kayayyaki</string>
+    <string name="tag_books">Littattafai</string>
+    <string name="tag_accessories">Na\'urorin haɗi</string>
+    <string name="tag_kitchen">Dakin Girki</string>
+    <string name="tag_clothes">Tufafi</string>
+    <string name="tag_technology">Fasaha</string>
+    <string name="tag_home_appliances">Kayayyakin Gida</string>
+    <string name="tag_building_materials">Kayayyakin Gina</string>
     <string name="tag_textiles">Textiles</string>
-    <string name="tag_toys">Toys</string>
-    <string name="tag_tools">Tools</string>
-    <string name="tag_vehicles">Vehicles</string>
+    <string name="tag_toys">Wasan Yara</string>
+    <string name="tag_tools">Kayayyakin aiki</string>
+    <string name="tag_vehicles">Ababen hawa</string>
 
 </resources>
-
