--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,60 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">eArziki Marketplace</string>
-    <string name="nearest_items">Nearest Items</string>
-    <string name="date_newest">Date - Newest</string>
-    <string name="date_oldest">Date - Oldest</string>
-    <string name="price_cheapest">Price - Cheapest</string>
-    <string name="price_most_expensive">Price - Most Expensive</string>
-    <string name="initializing">Initializing...</string>
-    <string name="item_added_successfully">Item added successfully!</string>
-    <string name="unknown_category">Unknown Category!</string>
-    <string name="unknown_tag">Unknown Tag</string>
-    <string name="loading">Loading...</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="create_ad">Create Ad</string>
-    <string name="add_item_title">Title</string>
+    <string name="nearest_items">Articles les plus proches</string>
+    <string name="date_newest">Date - Plus récent</string>
+    <string name="date_oldest">Date - Plus ancien</string>
+    <string name="price_cheapest">Prix - Le moins cher</string>
+    <string name="price_most_expensive">Prix - Le plus cher</string>
+    <string name="initializing">Initialisation en cours...</string>
+    <string name="item_added_successfully">Article ajouté avec succès !</string>
+    <string name="unknown_category">Catégorie inconnue !</string>
+    <string name="unknown_tag">Tag inconnu</string>
+    <string name="loading">Chargement...</string>
+    <string name="no_items_found">Aucun article trouvé.</string>
+    <string name="create_ad">Créer une annonce</string>
+    <string name="add_item_title">Titre</string>
     <string name="add_item_description">Description</string>
-    <string name="add_item_category">Category</string>
-    <string name="add_item_price">Price</string>
-    <string name="please_enter_a_valid_number">Please enter a valid number</string>
-    <string name="invalid_price">Invalid price</string>
-    <string name="please_fill_all_fields">Please fill all fields</string>
-    <string name="next">Next</string>
-    <string name="add_your_photos">Add your photos</string>
-    <string name="please_choose_at_least_one_image">Please choose at least one image</string>
-    <string name="post_item">Post item</string>
-    <string name="preparing">Preparing...</string>
-    <string name="uploading">Uploading...</string>
-    <string name="uploaded_successfully">Uploaded Successfully!</string>
-    <string name="marketplace">Marketplace</string>
+    <string name="add_item_category">Catégorie</string>
+    <string name="add_item_price">Prix</string>
+    <string name="please_enter_a_valid_number">Veuillez entrer un numéro valide</string>
+    <string name="invalid_price">Prix invalide</string>
+    <string name="please_fill_all_fields">Veuillez remplir tous les champs</string>
+    <string name="next">Suivant</string>
+    <string name="add_your_photos">Ajoutez vos photos</string>
+    <string name="please_choose_at_least_one_image">Veuillez choisir au moins une image</string>
+    <string name="post_item">Publier l\'article</string>
+    <string name="preparing">Préparation en cours...</string>
+    <string name="uploading">Téléchargement en cours...</string>
+    <string name="uploaded_successfully">Téléchargé avec succès !</string>
+    <string name="marketplace">Place de marché</string>
     <string name="earziki" translatable="false">eArziki</string>
-    <string name="posted">Posted</string>
-    <string name="location">location..</string>
+    <string name="posted">Publié</string>
+    <string name="location">emplacement..</string>
     <string name="whatsapp" translatable="false">WhatsApp</string>
-    <string name="text_seller">Text seller</string>
+    <string name="text_seller">Contacter le vendeur</string>
     <string name="sms">SMS</string>
-    <string name="category_home_crafts">Home Crafts</string>
-    <string name="category_used_items">Used Items</string>
-    <string name="category_food_agriculture"><![CDATA[Food & Agriculture]]></string>
-    <string name="category_local_services">Local Services</string>
-    <string name="category_local_offers">Local Offers from Shops and Restaurants</string>
-    <string name="items">%1$s items</string>
-    <string name="search">Search</string>
-    <string name="decoratives">Decoratives</string>
+    <string name="category_home_crafts">Artisanat à domicile</string>
+    <string name="category_used_items">Articles d\'occasion</string>
+    <string name="category_food_agriculture">Alimentation et Agriculture</string>
+    <string name="category_local_services">Services locaux</string>
+    <string name="category_local_offers">Offres locales des magasins et restaurants</string>
+    <string name="items">%1$s articles</string>
+    <string name="search">Rechercher</string>
+    <string name="decoratives">Articles décoratifs</string>
     <string name="tag_sports">Sports</string>
-    <string name="tag_electronics">Electronics</string>
-    <string name="tag_materials">Materials</string>
-    <string name="tag_books">Books</string>
-    <string name="tag_accessories">Accessories</string>
-    <string name="tag_kitchen">Kitchen</string>
-    <string name="tag_clothes">Clothes</string>
-    <string name="tag_technology">Technology</string>
-    <string name="tag_home_appliances">Home Appliances</string>
-    <string name="tag_building_materials">Building Materials</string>
+    <string name="tag_electronics">Électronique</string>
+    <string name="tag_materials">Matériaux</string>
+    <string name="tag_books">Livres</string>
+    <string name="tag_accessories">Accessoires</string>
+    <string name="tag_kitchen">Cuisine</string>
+    <string name="tag_clothes">Vêtements</string>
+    <string name="tag_technology">Technologie</string>
+    <string name="tag_home_appliances">Appareils ménagers</string>
+    <string name="tag_building_materials">Matériaux de construction</string>
     <string name="tag_textiles">Textiles</string>
-    <string name="tag_toys">Toys</string>
-    <string name="tag_tools">Tools</string>
-    <string name="tag_vehicles">Vehicles</string>
+    <string name="tag_toys">Jouets</string>
+    <string name="tag_tools">Outils</string>
+    <string name="tag_vehicles">Véhicules</string>
 
 </resources>
-
