--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -61,4 +61,5 @@
     <string name="back">Baya</string>
     <string name="user_profile">Bayanin Mai amfani</string>
     <string name="current_language">Harshe na Yanzu: %1$s</string>
+    <string name="company_offers">Tayin Kamfani</string>
 </resources>
