--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,5 +62,38 @@
     <string name="user_profile">Profil de l\'utilisateur</string>
     <string name="current_language">Langue actuelle : %1$s</string>
     <string name="company_offers">Offres de l\'entreprise</string>
+    <string name="email">E-mail</string>
+    <string name="password">Mot de passe</string>
+    <string name="login">Connexion</string>
+    <string name="don_t_have_an_account_sign_up_now">Vous n\'avez pas de compte ? Inscrivez-vous maintenant !</string>
+    <string name="please_fill_in_all_fields">Veuillez remplir tous les champs</string>
+    <string name="sign_in_successful_email">Connexion réussie ! E-mail : %1$s</string>
+    <string name="error">Erreur</string>
+    <string name="confirm_password">Confirmer le mot de passe</string>
+    <string name="first_name">Prénom</string>
+    <string name="surname">Nom de famille</string>
+    <string name="phone_number">Numéro de téléphone</string>
+    <string name="age">Âge</string>
+    <string name="first_name_is_required">Le prénom est requis</string>
+    <string name="surname_is_required">Le nom de famille est requis</string>
+    <string name="phone_number_must_be_8_digits">Le numéro de téléphone doit être de 8 chiffres</string>
+    <string name="phone_number_must_be_numeric">Le numéro de téléphone doit être numérique</string>
+    <string name="invalid_email_format">Format d\'e-mail invalide</string>
+    <string name="password_is_required">Le mot de passe est requis</string>
+    <string name="confirm_password_is_required">La confirmation du mot de passe est requise</string>
+    <string name="passwords_do_not_match">Les mots de passe ne correspondent pas</string>
+    <string name="first_name_cannot_contain_numbers">Le prénom ne peut pas contenir de chiffres</string>
+    <string name="surname_cannot_contain_numbers">Le nom de famille ne peut pas contenir de chiffres</string>
+    <string name="age_is_required">L\'âge est requis</string>
+    <string name="you_must_be_above_16_years_old_to_sign_up">Vous devez avoir plus de 16 ans pour vous inscrire</string>
+    <string name="sign_up">S\'inscrire</string>
+    <string name="already_a_member_login">Déjà membre ? Connectez-vous !</string>
+    <string name="sign_up_successful_email">Inscription réussie ! E-mail : %1$s</string>
+    <string name="email_already_registered">E-mail déjà enregistré</string>
+    <string name="resource_not_found_or_access_denied">Ressource non trouvée ou accès refusé</string>
+    <string name="unauthorized_access">Accès non autorisé</string>
+    <string name="too_many_requests_please_try_again_later">Trop de demandes, veuillez réessayer plus tard</string>
+    <string name="database_timeout_please_try_again_later">Délai d\'attente de la base de données, veuillez réessayer plus tard</string>
+    <string name="internal_server_error_please_contact_support">Erreur interne du serveur, veuillez contacter le support</string>
 
 </resources>
