--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -62,4 +62,38 @@
     <string name="user_profile">Bayanin Mai amfani</string>
     <string name="current_language">Harshe na Yanzu: %1$s</string>
     <string name="company_offers">Tayin Kamfani</string>
+    <string name="email">Imel</string>
+    <string name="password">Kalmar sirri</string>
+    <string name="login">Shiga</string>
+    <string name="don_t_have_an_account_sign_up_now">Ba ka da asusu? Yi rajista yanzu!</string>
+    <string name="please_fill_in_all_fields">Da fatan za a cika dukkan filayen</string>
+    <string name="sign_in_successful_email">An shiga da nasara! Imel: %1$s</string>
+    <string name="error">Kuskure</string>
+    <string name="confirm_password">Tabbatar da kalmar sirri</string>
+    <string name="first_name">Sunan rana</string>
+    <string name="surname">Sunan mahaifa</string>
+    <string name="phone_number">Lambar waya</string>
+    <string name="age">Shekaru</string>
+    <string name="first_name_is_required">Akwai buƙatar sunan rana</string>
+    <string name="surname_is_required">Akwai buƙatar sunan mahaifa</string>
+    <string name="phone_number_must_be_8_digits">Lambar waya dole ne ya zama lambobi 8</string>
+    <string name="phone_number_must_be_numeric">Lambar waya dole ne ta zama ta lambobi</string>
+    <string name="invalid_email_format">Tsarin imel ba daidai ba</string>
+    <string name="password_is_required">Akwai buƙatar kalmar sirri</string>
+    <string name="confirm_password_is_required">Akwai buƙatar tabbatar da kalmar sirri</string>
+    <string name="passwords_do_not_match">Kalmar sirri ba ta dace ba</string>
+    <string name="first_name_cannot_contain_numbers">Sunan rana ba zai iya ƙunsar lambobi ba</string>
+    <string name="surname_cannot_contain_numbers">Sunan mahaifa ba zai iya ƙunsar lambobi ba</string>
+    <string name="age_is_required">Akwai buƙatar shekaru</string>
+    <string name="you_must_be_above_16_years_old_to_sign_up">Dole ne ka haura shekaru 16 don rajista</string>
+    <string name="sign_up">Yi rajista</string>
+    <string name="already_a_member_login">Rigima memba? Shiga!</string>
+    <string name="sign_up_successful_email">Rajista da nasara! Imel: %1$s</string>
+    <string name="email_already_registered">An riga an yi rajista da Imel</string>
+    <string name="resource_not_found_or_access_denied">Ba a sami albarkatu ba ko an hana samun dama</string>
+    <string name="unauthorized_access">Samun dama ba tare da izini ba</string>
+    <string name="too_many_requests_please_try_again_later">Akwai yawan buƙatu, da fatan a gwada sake daga baya</string>
+    <string name="database_timeout_please_try_again_later">Lokacin ajiyar bayanai ya ƙare, da fatan a sake gwadawa daga baya</string>
+    <string name="internal_server_error_please_contact_support">Kuskure na cikin uwar garke, da fatan a tuntubi goyon baya</string>
+
 </resources>
